--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -25,7 +25,6 @@ ul {
 img {
   display: block;
   max-width: 100%;
-  height: 100%;
   margin: auto;
   // width: 100%;
   // height: auto;
